seed/eks-simple/src/components/whoami/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami
  namespace: whoami
spec:
  rules:
  - host: whoami.inlloc439c7nwaddbbc3oduuk0.stage.nuon.run
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: whoami
            port:
              number: 80
  ingressClassName: nginx
